# BibliothequeLivre

./: Bibliotheque.cpp  CMakeLists.txt  Etudiant.cpp  Livre.cpp  README.md  consignes_exercice.txt  main.cpp
include/: Bibliotheque.h  ConsoleFormat.h  Etudiant.h  Livre.h
